--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <button class="function">.</button>
         <button class="function">=</button>
         <button class="function">+</button>
+        <button class="function">C</button>
       </div>
     </div>
   </body>
