--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css"></link>
-    <script src="script.js"></script>
     <title>Calculator</title>
   </head>
   <body>
@@ -15,24 +14,25 @@
     <div id="container" class="container">
       <input id="display" class="display" type="text" readonly />
       <div id="buttons-container" class="buttons-container">
-        <button id="number-value" class="number-value">7</button>
-        <button id="number-value" class="number-value">8</button>
-        <button id="number-value" class="number-value">9</button>
-        <button id="function" class="function">/</button>
-        <button id="number-value" class="number-value">4</button>
-        <button id="number-value" class="number-value">5</button>
-        <button id="number-value" class="number-value">6</button>
-        <button id="function" class="function">x</button>
-        <button id="number-value" class="number-value">1</button>
-        <button id="number-value" class="number-value">2</button>
-        <button id="number-value" class="number-value">3</button>
-        <button id="function" class="function">-</button>
-        <button id="number-value" class="number-value">0</button>
-        <button id="number-value" class="number-value">.</button>
-        <button id="function" class="function">=</button>
-        <button id="function" class="function">+</button>
-        <button id="function-clear" class="function-clear">C</button>
+        <button id="number-value" class="number-value" onclick="appendToDisplay('7')">7</button>
+        <button id="number-value" class="number-value" onclick="appendToDisplay('8')">8</button>
+        <button id="number-value" class="number-value" onclick="appendToDisplay('9')">9</button>
+        <button id="function" class="function" onclick="appendToDisplay('/')">/</button>
+        <button id="number-value" class="number-value" onclick="appendToDisplay('4')">4</button>
+        <button id="number-value" class="number-value"onclick="appendToDisplay('5')">5</button>
+        <button id="number-value" class="number-value"onclick="appendToDisplay('6')">6</button>
+        <button id="function" class="function" onclick="appendToDisplay('*')">x</button>
+        <button id="number-value" class="number-value" onclick="appendToDisplay('1')">1</button>
+        <button id="number-value" class="number-value" onclick="appendToDisplay('2')">2</button>
+        <button id="number-value" class="number-value"onclick="appendToDisplay('3')">3</button>
+        <button id="function" class="function" onclick="appendToDisplay('-')">-</button>
+        <button id="number-value" class="number-value" onclick="appendToDisplay('0')">0</button>
+        <button id="number-value" class="number-value" onclick="appendToDisplay('.')">.</button>
+        <button id="function" class="function" onclick="calculate()">=</button>
+        <button id="function" class="function" onclick="appendToDisplay('+')">+</button>
+        <button id="function-clear" class="function-clear" onclick="clearValues()">C</button>
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
